# Web-SQL

./: connection.py  create_db.py  create_table.sql  main.py  pyproject.toml  query_1.sql
